<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddInstitution">

    <TextView
        android:id="@+id/addInstitutionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:elevation="8dp"
        android:text="@string/add_institution"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/saveInstitutionsButton"
        app:layout_constraintStart_toEndOf="@+id/institutionsBackToBioButton" />

    <Button
        android:id="@+id/saveInstitutionsButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded"
        android:elevation="16dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:onClick="onClickSaveInstitutions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/institutionsBackToBioButton"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back"
        android:onClick="onClickInstitutionsBackToBio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addInstitutionsTextView" />

    <EditText
        android:id="@+id/institutionsEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:padding="7dp"
        android:drawableStart="@drawable/ic_institution"
        android:drawableLeft="@drawable/ic_institution"
        android:drawablePadding="4dp"
        android:imeOptions="actionDone"
        android:minLines="3"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/enter_institution"
        style="@style/TextAppearance.App.TextInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addInstitutionsTextView"
        android:inputType="textCapWords|textMultiLine" />

    <ScrollView
        android:id="@+id/institutionsScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/institutionsEditText">
        <LinearLayout
            android:id="@+id/institutionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>